--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,6 +8,7 @@
 .scrolled {
   background-color: #fff; /* Change background color on scroll */
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow on scroll */
+  z-index: 1;
 }
 
 .nav-logo {
